# eddys_snippets

./: .gitignore  11a.c  B-trees.c  B-trees.h  C-functions_overload.c  En_words  Makefile  README  Readme.md  USB_reset.c  bidirectional_list.c  count_bits.c  cryptpass.c  factor.c  fixed_sort_example.c  hashtest.c  inotify.c  med.c  powerof2.c  randline.c  sendfile.c  sigtest.c  simple_Eratosfen_sieve.c  simple_list.h  sockmsgs.c  tmout.c  usefull_macros.c  usefull_macros.h  xor.c
ESP8266/: CMakeLists.txt  Readme  esp8266.c  esp8266.h  main.c  serial.c  serial.h
FITS/: Makefile  fits.c  main.c  usefull_macros.h
GLUT_window/: Makefile  Readme  aux.h  cmdlnopts.c  cmdlnopts.h  events.c  events.h  image_functions.c  image_functions.h  imageview.c  imageview.h  opengl.c  opengl.creator.user.7bd84e3  opengl.files
GPS/: Makefile  cmdlnopts.c  cmdlnopts.h  daemon.c  daemon.h  main.c  usefull_macros.c  usefull_macros.h
HSFW_management/: 99-edmund_hsfw.rules  CMakeLists.txt  Readme.md  cmdlnopts.c  cmdlnopts.h  hidmanage.c  hidmanage.h  hsfw.c  hsfw.h  main.c  parseargs.c  parseargs.h  usefull_macros.c  usefull_macros.h
HSFW_management/locale/ru/: messages.po  ru.po
HSFW_management/locale/ru/LC_MESSAGES/: HSFW_manage.mo
I2Csensors/: BMP180.c  BMP180.h  BMP280.c  BMP280.h  BMP580.c  BMP580.h  CMakeLists.txt  Makefile  PCA9548  Readme.md  SHT3x.c  SHT3x.h  SI7005.c  SI7005.h  aht.c  aht.h  common_table  i2c.c  i2c.h  i2csensorsPTH.h  i2csensorsPTH.pc.in  main.c  sensor.c  sensor.config  sensor.files  sensor.h  sensors_private.h
I2Csensors/examples/: CMakeLists.txt  MAP  Readme.md  logmany.c  single_sensor.c
MLX90640_OrangePi/: Makefile  cmdlnopts.c  cmdlnopts.h  main.c  mlx  mlx90640.c  mlx90640.h  mlx90640_regs.h  mxl90640OPi.config  mxl90640OPi.files  mxl90640OPi.includes
MLX90640_test/: Makefile  Readme  main.c  mlx90640.c  mlx90640.h  mlxtest.files  testdata.h
NES_webiface/: .gitignore  CMakeLists.txt  HOWTO.cert  README.md  auth.c  auth.h  cert.key  cert.pem  cmdlnopts.c  cmdlnopts.h  main.c  websockets.c  websockets.h
NES_webiface/static/: admin.html  auth.js  index.html  pass.html  pass.js  requests.js
Ncurses/: Makefile  ncurses.files  ncurses_and_readline.c  rolling.c  scrollfile.c
Raspberry/MPU-6050-log/: MPU6050.h  Makefile  README  main.c
SMSD-1.5/: README  client.c
SSL_Socket_snippet/: Makefile  Readme  ca_cert.pem  client.c  client.h  client_cert.pem  client_key.pem  cmdlnopts.c  cmdlnopts.h  daemon.c  daemon.h  main.c  server.c  server.h  server_cert.pem  server_key.pem  sslsock.c  sslsock.h  sslsosk.config  sslsosk.files
Socket_CAN/: 99-socketcan.rules  HOWTO.cert  Makefile  Makefile.bk  README_ports  Readme.md  SocketCAN.config  SocketCAN.files  can4linux.h  can_io.c  can_io.h  canbus.h  cansock.c  cert.key  cert.pem  client.c  client.h  cmdlnopts.c  cmdlnopts.h  daemon.c  daemon.h  server.c  server.h  soccanclient  soccanserver  socketcan0  sslsock.c  sslsock.h
Socket_CAN/ca/: gen.sh
Socket_CAN/diff/: clientscript  serverscript
Socket_snippet/: Makefile  Readme.md  cmdlnopts.c  cmdlnopts.h  main.c  server.c  server.h  socket  socket.c  socket.h  socksnippet.files  testcommands
TeAmanagement/: Makefile  Readme  TeAman.files  cmdlnopts.c  cmdlnopts.h  main.c  out.fits  sersock.c  sersock.h  teacmd.c  teacmd.h
Tetris/: Makefile  disp.c  disp.h  displaybuf.c  displaybuf.h  main.c  tetris.config  tetris.files
USBrelay/: 1.c  99-hidrelay.rules  Makefile
Zernike/: Makefile  README  Z-BTA_test.c  simple_list.c  simple_list.h  spots.c  spots.h  test.c  zern_private.h  zernike.c  zernike.h  zernikeR.c  zernike_annular.c
_deprecated/: bidirectional_list.h  fifo_lifo.c  fifo_lifo.h  guard.c  mydiff.c  opengl.c  pipe_and_buffering_read.c  randomstring.c  simple_list.c
_snippets/: B-trees.c  Bresenham_circle.c  clr.c  comments_before.c  get_avail_mem.c  pwd.c  simple_Eratosfen_sieve.c  translateCintoASM
astrosib/: CMakeLists.txt  Readme.md  astrosib.h
astrosib_utils/: Readme
avx/: Makefile  add.c  dotproduct.c
calcAP/: Makefile  Readme  slalib_and_sofa.c  slalib_sofa_nova.c
cmakelists_/: CMakeLists.txt  CMakeLists_regular_01.txt  CMakeLists_regular_02.txt  CMakeLists_regular_03.txt  CMakeLists_regular_04.txt  Makefile  Makefile_dbg_rls  Makefiledbg
deepseek/: Readme  hashreplace.c  thermal.c  transformator
erosion-dilation/: Makefile  README  binmorph.c  binmorph.h  cclabling.h  cclabling_1.h  dilation.h  main.c
getopt/: README  cmdlnopts.h  getopt.c  parceargs.h
image_view_module/: CMakeLists.txt  README  bmpview.c  bmpview.h  events.c  events.h  imageview.c  imageview.h  list.c  list.h  macros.c  macros.h  main.c  main.h
image_view_module/locale/ru/: messages.po  ru.po
image_view_module/locale/ru/LC_MESSAGES/: image_view_module.mo  openglview.mo
json/: json.c
kicad-copy/: Makefile  cmdlnopts.c  copy_pcb.c  parceargs.c
modbus_params/: Makefile  Readme  Readme.md  dictionary.c  dictionary.dic  dictionary.h  main.c  modbus.c  modbus.h  modbus_param.config  modbus_param.files  relay.aliases  relay.dic  server.c  server.h  verbose.c  verbose.h
modbus_relay/: cmdlnopts.c  cmdlnopts.h  main.c  modbus_relay  modbus_relay.files
netdaemon/: Readme.md  cmdlnopts.c  socket.c  socket.h  term.c  term.h  usefull_macros.c
serialsock/: Makefile  Readme  Readme.md  canserver.config  canserver.files  cmdlnopts.c  cmdlnopts.h  main.c  sersock.c  sersock.h
serialsockCANmanage/: Makefile  Readme  SEWmanage.files  cmdlnopts.c  cmdlnopts.h  main.c  sersock.c  sersock.h
sharedlib_template/: CMake.readme  CMakeLists.txt
sharedlib_template/examples/: CMakeLists.txt  helloworld.c
simple_gettext/: test_ru.po
simple_websockets/: Makefile  Readme.md  main.c  que.h
stellarium_emul/: Makefile  cmdlnopts.c  daemon.c  main.c  telescope.c  usefull_macros.c  usefull_macros.h
stringHash4MCU_/: En_words  Readme  hashgen.c  hashtest.c  runtest  test.c  testdic
table_sincos/: Makefile  README  calcsin.c  gentab.c  sqrt.c
thread_array_management/: Makefile  Readme  test.c
usb_reset/: reset.c
websockets/: test.c  test.html
(+127 files in other folders)
